# Business-Accounting-App

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  TODO.md  entrypoint.sh  generate_template.py  index.html  main.py  notes.txt  package-lock.json  package.json  prompt 2.txt  prompt.txt  render.yaml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
db/migrations/: 2025_09_09_add_performance_indexes.sql  2025_09_10_initial_schema.sql  2025_add_indexes_and_guards.sql  2025_schema_and_seed.sql
frontend/: package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: Layout.tsx
frontend/src/components/AccountSelector/: index.tsx
frontend/src/components/CategoryManager/: index.tsx
frontend/src/components/TransactionEditor/: index.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/pages/: EditorPage.tsx  ReportsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: validators.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  migrations.rs
src-tauri/src/commands/: accounts.rs
src/@types/: tauri.d.ts
src/db/: db.ts
src/hooks/: useAccounts.ts
src/pages/: Accounts.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
src/services/: ReportService.ts
src/services/__tests__/: ReportService.test.ts
src/types/: accounting.ts
src/utils/: formatters.ts
