[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
serde_json = "1.0.108"
serde = { version = "1.0.195", features = ["derive"] }
log = "0.4.20"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = "2.0.0"
anyhow = "1.0.79"
